Add index text content and favicon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
   <meta charset="UTF-8">
   <title>Link-to-site by koombea</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/images/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/images/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/images/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/images/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/images/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/images/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="assets/images/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+  <link rel="manifest" href="assets/images/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="assets/images/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
   <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
 </head>
@@ -24,12 +41,26 @@
   </section>
 
   <section class="main-content">
+    <h3><strong>Link to Page </strong>allows you to link to an outside source straight from your post's title. </h3>
+    <p>Blogging takes time and sometimes you just want to comment on a cool blog post, article or website that you found online without all the extra effort. The "Link To Site" plugin allows you to create a link style post quickly and easily, thus reducing the friction required to create quick posts.</p>
+    <h3><strong>Key advantages:</strong></h3>
+    <ul class="list points--green">
+      <li><span>Easily create new linked entries using a bookmarklet similar to Press This.</span></li>
+      <li><span>No need to alter your theme in any way to start using it.</span></li>
+      <li><span>Easily create a new entry from the standard WordPress editor.</span></li>
+      <li><span>Automatically add a permalink at the bottom of each post and in your RSS feed.</span></li>
+      <li><span>You can set a default category and post format for entries created using the bookmarklet.</span></li>
+      <li><span>The bookmarklet auto generates the URL permalink based on the post's title.</span></li>
+      <li><span>You can set the publishing times for the entires if you want to make sure the post goes out at certain times during the day or night.</span></li>
+      <li><span>The external URL is saved as a standard Wordpress option, so you won't loose any data in case you unistall the plugin.</span></li>
+    </ul>
+    <p class="soft--bottom">Linked list style post has become common in blogs like DaringFireball.net, Marco.org, MacStories.net and SixColors.com. Instal the <strong>Wordpress</strong> plugin and enjoy.</p>
+    <p><a href="https://github.com/koombea/link-to-site" class="btn one-whole btn--purple">INSTAL PLUGIN</a></p>
 
-    <footer class="site-footer">
-      <span class="site-footer-owner"><a href="https://github.com/koombea/link-to-site">Link-to-site</a> is maintained by <a href="https://github.com/koombea">koombea</a>.</span>
-
+    <footer class="site-footer text--center">
+      <div class="koombea-logo push--bottom">Product by: <img src="assets/images/koombea-logo.svg" alt=""></div>
+      <div class="copyright">©2015 Link to Page. All rights reserved.</div>
     </footer>
-
   </section>
 
   <script type="text/javascript">
