--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div class="top-header">
-    <h1><a href="/" class="logo"><img src="assets/images/logo.svg" alt=""></a></h1>
+    <h1><a href="javascript:;" class="logo"><img src="assets/images/logo.svg" alt="Link To Page Logo"></a></h1>
     <a href="https://github.com/koombea/link-to-site" class="btn install-plugin">INSTAL PLUGIN</a>
   </div>
   <section class="page-header">
@@ -59,7 +59,7 @@
 
     <footer class="site-footer text--center">
       <div class="koombea-logo push--bottom">Product by: <img src="assets/images/koombea-logo.svg" alt=""></div>
-      <div class="copyright">©2015 Link to Page. All rights reserved.</div>
+      <div class="copyright">©<script>document.write(new Date().getFullYear());</script> Link to Page. All rights reserved.</div>
     </footer>
   </section>
 
