--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <div class="top-header">
     <h1><a href="javascript:;" class="logo"><img src="assets/images/logo.svg" alt="Link To Site Logo"></a></h1>
-    <a href="https://github.com/koombea/link-to-site" class="btn install-plugin">INSTAL PLUGIN</a>
+    <a href="https://github.com/koombea/link-to-site" class="btn install-plugin">INSTALL PLUGIN</a>
   </div>
   <section class="page-header">
 
@@ -52,14 +52,14 @@
       <li><span>You can set a default category and post format for entries created using the bookmarklet.</span></li>
       <li><span>The bookmarklet auto generates the URL permalink based on the post's title.</span></li>
       <li><span>You can set the publishing times for the entires if you want to make sure the post goes out at certain times during the day or night.</span></li>
-      <li><span>The external URL is saved as a standard Wordpress option, so you won't loose any data in case you unistall the plugin.</span></li>
+      <li><span>The external URL is saved as a standard Wordpress option, so you won't loose any data in case you uninstall the plugin.</span></li>
     </ul>
     <p class="soft--bottom">Linked list style post has become common in blogs like DaringFireball.net, Marco.org, MacStories.net and SixColors.com. Instal the <strong>Wordpress</strong> plugin and enjoy.</p>
-    <p><a href="https://github.com/koombea/link-to-site" class="btn one-whole btn--purple">INSTAL PLUGIN</a></p>
+    <p><a href="https://github.com/koombea/link-to-site" class="btn one-whole btn--purple">INSTALL PLUGIN</a></p>
 
     <footer class="site-footer text--center">
       <div class="koombea-logo push--bottom">Product by: <a href="https://koombea.com" target="_blank"><img src="assets/images/koombea-logo.svg" alt=""></a></div>
-      <div class="copyright">©<script>document.write(new Date().getFullYear());</script> Link to Page. All rights reserved.</div>
+      <div class="copyright">©<script>document.write(new Date().getFullYear());</script> Link to Site. All rights reserved.</div>
     </footer>
   </section>
 
